--- a/src/main/resources/templates/main/userProfile.html
+++ b/src/main/resources/templates/main/userProfile.html
@@ -175,6 +175,118 @@
 
 
 
+<script>
+    //-- Container for all book results.
+    const searchBookContainer = document.getElementById("book-search-results");
+    //-- Input for book search
+    const searchBookInput = document.getElementById("book-search-input");
+
+
+    const searchBookCancelButton = document.getElementById("search-result-cancel-button");
+
+
+    const logoutButton = document.getElementById("logout-button");
+
+
+    //-- everytime the page reloads the search input value is always going to reset.
+    document.addEventListener("DOMContentLoaded", () => {
+        searchBookInput.value = "";
+        searchBookCancelButton.style.display = 'none'
+        logoutButton.style.display = 'block'
+
+    })
+    searchBookCancelButton.addEventListener("click", () =>{
+        logoutButton.style.display = "block";
+        searchBookInput.value = "";
+        searchBookCancelButton.style.display = 'none'
+        showSearchBook()
+    })
+
+    //-- Create a function that when user is pressing enter then start the code:
+    searchBookInput.addEventListener("keydown", (e)=> {
+        logoutButton.style.display = 'none';
+        searchBookCancelButton.style.display = 'block'
+        if (e.keyCode === 13){
+            console.log("Enter Pressed");
+            searchBookContainer.innerHTML = ` <div class='prompt'><div class="loading-image"></div></div>`
+            return setTimeout(()=>{showSearchBook()}, 800)
+        }
+    })
+
+
+
+    //-- Now what to do when you have your search results press enter then what?
+
+    // -- Create a function that will search for an input in the nav.
+    //    will be using DOM to accomplish this.
+    const showSearchBook = async () => {
+        //-- Search for input
+        if (searchBookInput.value !== "") {
+            searchBookContainer.style.display = "flex";
+
+            // Crate a function named getBooks that fetches the API.
+            const getBooks = async (book) => {
+                const response = await fetch(
+                    `https://www.googleapis.com/books/v1/volumes?q=${book}&printType=books`
+                );
+                const data = await response.json();
+                return data;
+            }
+
+            console.log("Working")
+
+            //-- Data is going to call the function to get the books
+            const data = await getBooks(`${searchBookInput.value}&maxResults=10`);
+            //-- data
+            if (data.error) {
+                searchBookContainer.innerHTML = `<div>Network Problem</div>`
+            } else if (data.totalItems === 0) {
+                searchBookContainer.innerHTML = `<div class='prompt'>Try a different term</div>`;
+            } else if (data.totalItems === undefined) {
+                searchBookContainer.innerHTML = `<div class='prompt'>Network problem!</div>`;
+            } else {
+                searchBookContainer.innerHTML = data.items.map( (({ volumeInfo }) => {
+                    console.log(volumeInfo);
+                   return `<div class="nav-bar-search-form-container">
+                            <form method="POST" action="">
+                               <input type="hidden" name="_CSRF" value="$(searchBookInput.val())" />
+                               <input type="hidden" name="title" value="${volumeInfo.title}" />
+                               <input type="hidden" name="isbn" value="${volumeInfo.industryIdentifiers[0].identifier}" />
+                               <input type="hidden" name="author" value="${volumeInfo.authors[0]}" />
+                               <input type="hidden" name="bookImage" value="${volumeInfo.imageLinks.thumbnail}" />
+                               <input type="hidden" name="averageRating" value="${volumeInfo.averageRating}" />
+                               <input type="hidden" name="descrition" value="${volumeInfo.description}"/>
+                               <input type="hidden" name="genreCategories"  th:value="${volumeInfo.categories}" />
+                               <input type="hidden" name="pageCount"  th:value="${volumeInfo.pageCount}" />
+                               <input type="hidden" name="publishedDate"  th:value="${volumeInfo.publishedDate}" />
+                               <input type="hidden" name="publishedDate"  th:value="${volumeInfo.publishedDate}" />
+                               <input type="hidden" name="googlePlay"  th:value="${volumeInfo.infoLink}" />
+                               <button type="submit" class="btn">
+                                    <img class="search-book-results-book-cover" src="${volumeInfo.imageLinks.thumbnail}" alt="${volumeInfo.title}">
+                                    <div class="nav-search-book-info-container">
+                                        <h4 class="nav-search-book-result-title">
+                                            <div class="nav-search-book-results">${volumeInfo.title}</div>
+                                        </h4>
+                                        <div class="nav-search-bar-results-authors">${volumeInfo.authors[0]}</div>
+                                    </div>
+                               </button>
+                            </form>
+                    </div>`
+                    }
+                ))
+            }
+        }else{
+            searchBookContainer.style.display = "none";
+        }
+    }
+
+
+
+
+
+
+
+</script>
 
 
 
