--- a/src/main/resources/templates/main/userProfile.html
+++ b/src/main/resources/templates/main/userProfile.html
@@ -171,5 +171,6 @@
 <!=== Footer ===>
 <footer th:replace="partials/footer.html :: Footer"></footer>
 <script th:src="@{/js/userProfile.js}"></script>
+<script th:src="@{/js/searchForBookNavbar.js}"></script>
 </body>
 </html>
