--- a/src/main/resources/templates/partials/loginNavbar.html
+++ b/src/main/resources/templates/partials/loginNavbar.html
@@ -9,10 +9,19 @@
         <!-- Anchors -->
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
+                <!-- Search by title form -->
+                <form class="d-flex">
+                    <!-- Input -->
+                    <input class="form-control me-2" type="search" placeholder="Press Enter" aria-label="Search" id="book-search-input">
+                    <!-- Cancel Button -->
+                    <img th:src="@{/img/search-result-cancel.png}" alt="Cancel Search" id="search-result-cancel-button">
+                </form>
+                <!-- Logout Button-->
                 <a th:href="@{/logout}" class="nav-link" id="logout-button">logout</a>
             </div>
         </div>
     </div>
+    <!-- The Search Book Results Container -->
     <div id="book-search-results" class="container-lg container-fluid"></div>
 </nav>
 
