css is responsive now for books search

--- a/src/main/resources/templates/partials/loginNavbar.html
+++ b/src/main/resources/templates/partials/loginNavbar.html
@@ -12,12 +12,12 @@
                 <!-- Search by title form -->
                 <form class="nav-bar-search-input-form">
                     <!-- Input -->
-                    <input class="form-control me-2" type="search" placeholder="Search for book title" aria-label="Search" id="book-search-input">
+                    <input class="form-control me-2" type="search" placeholder="Press enter" aria-label="Search" id="book-search-input">
                     <!-- Cancel Button -->
                     <img th:src="@{/img/search-result-cancel.png}" alt="Cancel Search" id="search-result-cancel-button">
                 </form>
                 <!-- Logout Button-->
-                <a th:href="@{/logout}" class="nav-link" id="logout-button">logout</a>
+                <a th:href="@{/logout}" class=" btn btn-outline-danger w-25" id="logout-button" >logout</a>
             </div>
         </div>
     </div>
