--- a/src/main/resources/static/css/navbarStylesheet.css
+++ b/src/main/resources/static/css/navbarStylesheet.css
@@ -107,12 +107,26 @@
     position: sticky;
     top: 0;
     z-index: 100;
-    padding-bottom: 0;
+    align-items: center;
+    padding: 20px 0;
 }
-/*== Search for boot title Form ==*/
+
 .navbar .container #navbarNavAltMarkup .navbar-nav .nav-bar-search-input-form{
     position: relative;
+    margin-right: 24px;
+
 }
+/*== Search for boot title Form ==*/
+.navbar .container #navbarNavAltMarkup .navbar-nav #book-search-input{
+    transition: all 0.3s ease;
+}
+
+/*== Search for boot title Form When Active ==*/
+.navbar .container #navbarNavAltMarkup .navbar-nav #book-search-input:focus{
+    outline: none;
+    box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px, rgb(51, 51, 51) 0 0 0 3px;
+}
+
 /*== Cancel button in search for book form ==*/
 .navbar .container #navbarNavAltMarkup .navbar-nav .nav-bar-search-input-form #search-result-cancel-button{
     position: absolute;
@@ -178,3 +192,82 @@ nav #book-search-results {
 }
 /*== Search Book Result Book Description ==*/
 #book-search-results .nav-bar-search-form-container form button .nav-search-book-info-container .nav-search-bar-results-authors {}
+
+
+
+/**=== Screen smaller then 991px ===*!*/
+@media (max-width: 991px){
+    /*== Cancel button in search for book form ==*/
+    .navbar .container #navbarNavAltMarkup .navbar-nav .nav-bar-search-input-form #search-result-cancel-button{
+        position: absolute;
+        right: 10px;
+        top: 18px;
+        height: 24px;
+        cursor: pointer;
+    }
+
+    nav #book-search-results {
+        width: 100%;
+        height: 100%;
+        padding: 40px 0;
+        margin:0;
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+        gap: 12px;
+        justify-content: center;
+
+    }
+    /*== Search Book Result Book Title ==*/
+    #book-search-results .nav-bar-search-form-container form button .nav-search-book-info-container h4 {
+        font-size: 18px;
+    }
+
+    /*== Search Book Result Book Authors ==*/
+    #book-search-results .nav-bar-search-form-container form button .nav-search-book-info-container .nav-search-bar-results-authors {
+        font-size: 16px;
+    }
+    /*== Search Book Result Book Cover ==*/
+    #book-search-results .nav-bar-search-form-container form button .search-book-results-book-cover {
+        height: 180px;
+        width: 110px;
+    }
+    /*== Book Search Result form ==*/
+    .navbar #book-search-results .nav-bar-search-form-container form {
+        margin-right: 0;
+    }
+    /*== Search for boot title Form ==*/
+    .navbar .container #navbarNavAltMarkup .navbar-nav #book-search-input{
+        margin-top: 12px;
+        margin-bottom: 12px;
+    }
+    /*== Book Search Result display button ==*/
+    .navbar #book-search-results .nav-bar-search-form-container form button {
+        display: flex;
+        flex-direction:row;
+        width:45vw;
+    }
+}
+
+/*=== Screen smaller then 768px ===*/
+@media (max-width: 768px){
+    /*== Cancel button in search for book form ==*/
+    .navbar .container #navbarNavAltMarkup .navbar-nav .nav-bar-search-input-form #search-result-cancel-button{
+        position: absolute;
+        right: 10px;
+        top: 20px;
+        height: 24px;
+        cursor: pointer;
+    }
+}
+
+
+
+/*=== Screen smaller then 575px ===*/
+@media (max-width: 575px){
+    /*== Book Search Result display button ==*/
+    .navbar #book-search-results .nav-bar-search-form-container form button {
+        display: flex;
+        flex-direction:row;
+        width:  90vw;
+    }
+}
