--- a/src/main/resources/templates/main/introduction-page.html
+++ b/src/main/resources/templates/main/introduction-page.html
@@ -50,7 +50,7 @@
             <!===== Book Section =====>
             <section class="d-flex overflow-scroll container-fluid container-lg position-relative" >
                 <section class="mx-3 book-container" th:each="book:${ThrillerBooks}">
-                    <a th:href="@{/singleBook/{id}(id = ${book.id})}" >
+                    <a th:href="@{/single/{id}(id = ${book.id})}" >
                         <img th:src="${book.getCover_page()}" th:alt="${book.getTitle()}" class="cover-page ">
                         <p class="book-info-container">
                             <span th:text="${book.getTitle()}" class="book-title">Title of Book</span> <br />
@@ -97,7 +97,7 @@
             <!===== Book Section =====>
             <section class="d-flex overflow-scroll container-fluid container-lg position-relative" >
                 <section class="mx-3 book-container" th:each="book:${FictionBooks}">
-                    <a th:href="@{/singleBook/{id}(id = ${book.id})}" >
+                    <a th:href="@{/single/{id}(id = ${book.id})}" >
                         <img th:src="${book.getCover_page()}" th:alt="${book.getTitle()}" class="cover-page ">
                         <p class="book-info-container">
                             <span th:text="${book.getTitle()}" class="book-title">Title of Book</span> <br />
