commented out navbar search till I figure out what's wrong.

--- a/src/main/resources/templates/main/SingleBookPreview.html
+++ b/src/main/resources/templates/main/SingleBookPreview.html
@@ -120,7 +120,7 @@
 
 <!=== Footer ===>
 <footer th:replace="partials/footer.html :: Footer"></footer>
-<script th:src="@{/js/searchForBookNavbar.js}"></script>
+<!--<script th:src="@{/js/searchForBookNavbar.js}"></script>-->
 
 </body>
 </html>
