Minor fixes, commented out the script and console log waht is wrong with the gather book method.

--- a/src/main/resources/templates/main/introduction-page.html
+++ b/src/main/resources/templates/main/introduction-page.html
@@ -100,7 +100,8 @@
 </div>
 
 <!=== Javascript ===>
-<script src="/js/myModule.js" type="application/javascript"></script>
+<!--<script src="/js/myModule.js" type="application/javascript"></script>-->
+<!--<script th:src="@{/js/searchForBookNavbar.js}"></script>-->
 <!=== Footer ===>
 <footer th:replace="partials/footer.html :: Footer"></footer>
 </body>
