Navigations work throughout the logged out process.

--- a/src/main/resources/templates/main/SingleBookPreview.html
+++ b/src/main/resources/templates/main/SingleBookPreview.html
@@ -121,6 +121,6 @@
 <!=== Footer ===>
 <footer th:replace="partials/footer.html :: Footer"></footer>
 <!--<script th:src="@{/js/searchForBookNavbar.js}"></script>-->
-
+<script th:src="@{/js/searchForBookNavbar.js}"></script>
 </body>
 </html>
