--- a/src/main/resources/templates/partials/loginNavbar.html
+++ b/src/main/resources/templates/partials/loginNavbar.html
@@ -10,12 +10,12 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
                 <!-- Search by title form -->
-                <form class="nav-bar-search-input-form">
+                <section class="nav-bar-search-input-form">
                     <!-- Input -->
                     <input class="form-control me-2" type="search" placeholder="Press enter" aria-label="Search" id="book-search-input">
                     <!-- Cancel Button -->
                     <img th:src="@{/img/search-result-cancel.png}" alt="Cancel Search" id="search-result-cancel-button">
-                </form>
+                </section>
                 <!-- Logout Button-->
                 <a th:href="@{/logout}" class=" btn btn-outline-danger w-25" id="logout-button" >logout</a>
             </div>
