--- a/src/main/resources/templates/main/introduction-page.html
+++ b/src/main/resources/templates/main/introduction-page.html
@@ -99,10 +99,10 @@
     </div>
 </div>
 
-<!=== Javascript ===>
-<!--<script src="/js/myModule.js" type="application/javascript"></script>-->
-<!--<script th:src="@{/js/searchForBookNavbar.js}"></script>-->
+
 <!=== Footer ===>
 <footer th:replace="partials/footer.html :: Footer"></footer>
+<!=== Javascript ===>
+<script th:src="@{/js/searchForBookNavbar.js}"></script>
 </body>
 </html>
