--- a/src/main/resources/static/css/singleBookStyleSheet.css
+++ b/src/main/resources/static/css/singleBookStyleSheet.css
@@ -23,7 +23,7 @@
     border-radius: 20px;
 }
 /*=== Purchase Book Button & Favorite Book Button ===*/
-#left-side-book-container .purchase-book-btn, #left-side-book-container .liked-book-btn{
+#left-side-book-container .purchase-book-btn, #left-side-book-container .liked-book-btn,#left-side-book-container .write-review-button{
     background-color: #13aa52;
     border: 1px solid #13aa52;
     border-radius: 4px;
@@ -47,7 +47,7 @@
     text-decoration: none;
 }
 /*=== Purchase Book Button: HOVER & Favorite Book Button Hover ===*/
-#left-side-book-container .purchase-book-btn:hover, #left-side-book-container .liked-book-btn:hover{
+#left-side-book-container .purchase-book-btn:hover, #left-side-book-container .liked-book-btn:hover, #left-side-book-container .write-review-button:hover{
     background-color: #0e8641;
     border: 1px solid #0e8641;
     transform: translateY(-2px);
@@ -58,12 +58,25 @@
     background-color: #A2BADCFF;
     border: 1px solid #A2BADCFF;
     color: #1e1e1e;
-    margin: 24px 0;
+    margin-top: 24px;
 }
 /*=== Favorite Book Button Hover ===*/
 #left-side-book-container .liked-book-btn:hover{
     background-color: rgba(100, 149, 237, 0.49);
     border: 1px solid rgba(100, 149, 237, 0.49);
+    color: #fff;
+}
+/*=== Write Review Book Button ===*/
+#left-side-book-container .write-review-button{
+    background-color: #dcbca2;
+    border: 1px solid #dcbca2;
+    color: #1e1e1e;
+    margin: 24px 0;
+}
+/*=== Write Review Book Button ===*/
+#left-side-book-container .write-review-button:hover{
+    background-color: #d98440;
+    border: 1px solid #d98440;
     color: #fff;
 }
 /*=== Heart Image ===*/
@@ -169,6 +182,40 @@
 }
 
 /*====== User Reviews ======*/
+
+.services #writeAReviewContainer{
+    width: 80%;
+    max-width: 620px;
+    background-color: rgba(255, 255, 255, 0.24);
+    margin: 0 auto;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    padding: 12px 24px;
+    border-radius: 25px;
+}
+.services #writeAReviewContainer h3{
+   /*font-size: 24px;*/
+}
+/*=== Write a review form ===*/
+.services #writeAReviewContainer form{
+    /*border: 5px solid black;*/
+}
+/*=== Write a review form Labels ===*/
+.services #writeAReviewContainer form label{
+    /*border: 5px solid black;*/
+    font-weight: 600;
+}
+
+.services #writeAReviewContainer form  input[type=range]::-moz-range-track {
+    background-color: #007bff;
+}
+
+
+
+
+
+
+
+
 /*== User Review Container ==*/
 .review-container{
     max-width: 640px;
